[tool.poetry]
name = "iscc-playground"
version = "0.1.0"
description = "UI for ISCC exploration"
authors = ["Titusz <tp@py7.de>"]
license = "Apache-2.0"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
gradio = "5.33.1"
iscc-sdk = "^0.6.2"
iscc-core= "^1.0.9"
iscc-sci = "^0.1.0"
plotly = "^5.22"

[tool.poetry.group.dev.dependencies]
ruff = "*"

[tool.ruff]
line-length = 100

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
