[project]
name = "iscc-playground"
version = "0.1.0"
description = "UI for ISCC exploration"
authors = [{ name = "Titusz", email = "tp@py7.de" }]
requires-python = ">=3.12,<3.13"
readme = "README.md"
license = "Apache-2.0"
dependencies = [
    "gradio==4.44.1",
    "iscc-sdk==0.6.2",
    "iscc-core==1.0.9",
    "iscc-sci==0.1.0",
    "plotly==5.22.0",
]

[dependency-groups]
dev = [
    "poethepoet>=0.35.0",
    "ruff",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 112

[tool.poe.tasks]
format-code = { cmd = "uv run ruff format", help = "Code style formating with ruff" }
sync-requirements = { cmd = "uv pip compile pyproject.toml -o requirements.txt", help = "Sync requirements.txt for huggingface spaces deployment"}
all = ["format-code", "sync-requirements"]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


