[project]
name = "iscc-playground"
version = "0.1.0"
description = "UI for ISCC exploration"
authors = [{ name = "Titusz", email = "tp@py7.de" }]
requires-python = ">=3.12,<3.13"
readme = "README.md"
license = "Apache-2.0"
dependencies = [
    "gradio==4.44.1",
    "iscc-sdk==0.6.2",
    "iscc-core==1.0.9",
    "iscc-sci==0.1.0",
    "plotly==5.22.0",
]

[dependency-groups]
dev = [
    "poethepoet>=0.35.0",
    "ruff",
    "mdformat",
    "mdformat-gfm",
    "mdformat-gfm-alerts",
    "mdformat_frontmatter",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 112

[tool.poe.tasks]
format-code = { cmd = "uv run ruff format", help = "Code style formating with ruff" }
format-markdown = { cmd = "uv run mdformat --wrap 112 --end-of-line lf .", help = "Markdown formating with mdformat" }
all = ["format-markdown", "format-code"]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


